--- a/download-sd-v2-1/Dockerfile
+++ b/download-sd-v2-1/Dockerfile
@@ -6,4 +6,6 @@ WORKDIR /download
 
 CMD mkdir -p models/Stable-diffusion && \
   aria2c -d models/Stable-diffusion -o v2-1_768-ema-pruned.ckpt https://huggingface.co/stabilityai/stable-diffusion-2-1/resolve/main/v2-1_768-ema-pruned.ckpt && \
-  aria2c -d models/Stable-diffusion -o v2-1_768-ema-pruned.yaml https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml
+  aria2c -d models/Stable-diffusion -o v2-1_768-ema-pruned.yaml https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml && \
+  aria2c -d models/Stable-diffusion -o v2-1_512-ema-pruned.ckpt https://huggingface.co/stabilityai/stable-diffusion-2-1-base/resolve/main/v2-1_512-ema-pruned.ckpt && \
+  aria2c -d models/Stable-diffusion -o v2-1_512-ema-pruned.yaml https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference.yaml
