--- a/webui/Dockerfile
+++ b/webui/Dockerfile
@@ -11,23 +11,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   python3-pip \
   && rm -rf /var/lib/apt/lists/*
 
+# for SD 2.0/2.1 models
+# this is optional but it avoids downloading a 3.94GB file on everytime "docker run"
+# RUN pip install huggingface-hub && python -c "from huggingface_hub import hf_hub_download; hf_hub_download(repo_id='laion/CLIP-ViT-H-14-laion2B-s32B-b79K', filename='open_clip_pytorch_model.bin')"
+
+# TODO: "pip install xformers" will be available, see https://github.com/facebookresearch/xformers/issues/533
+RUN pip install xformers==0.0.16rc425
+
 RUN git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git
 WORKDIR /stable-diffusion-webui
 
 RUN python -u launch.py --skip-torch-cuda-test --exit
-
-# TODO: "pip install xformers" will be available, see https://github.com/facebookresearch/xformers/issues/533
-RUN pip install https://github.com/AbdBarho/stable-diffusion-webui-docker/releases/download/4.0.0/xformers-0.0.16rc393-cp310-cp310-manylinux2014_x86_64.whl
-
-# for SD 1.4/1.5 models
-# this is optional but it avoids downloading a 1.71GB file on everytime "docker run"
-RUN git clone https://huggingface.co/openai/clip-vit-large-patch14 openai/clip-vit-large-patch14 && \
-  mv openai/clip-vit-large-patch14/pytorch_model.bin openai/clip-vit-large-patch14/pytorch_model.bin.bak && \
-  aria2c -d openai/clip-vit-large-patch14 https://huggingface.co/openai/clip-vit-large-patch14/resolve/main/pytorch_model.bin
-
-# for SD 2.0/2.1 models
-# this is optional but it avoids downloading a 3.94GB file on everytime "docker run"
-RUN python -c "from huggingface_hub import hf_hub_download; hf_hub_download(repo_id='laion/CLIP-ViT-H-14-laion2B-s32B-b79K', filename='open_clip_pytorch_model.bin')"
-
 
 CMD [ "python", "-u", "launch.py", "--xformers", "--no-half-vae", "--listen" ]
