--- a/webui-cpu/Dockerfile
+++ b/webui-cpu/Dockerfile
@@ -9,15 +9,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   python-is-python3 \
   python3 \
   python3-pip \
+  python3-venv \
   && rm -rf /var/lib/apt/lists/*
 
 
 RUN git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git
 WORKDIR /stable-diffusion-webui
 
-# replace "cu118" to "cpu"
-RUN sed -i -e "/pip install torch/ s/cu[0-9]\{3,\}/cpu/g" launch.py
-RUN sed -i -e 's/    return "cpu"/    torch.set_num_threads(4)\n    return "cpu"/' modules/devices.py
-RUN python -u launch.py --skip-torch-cuda-test --exit
+RUN TORCH_INDEX_URL="https://download.pytorch.org/whl/cpu" ./webui.sh -f --skip-torch-cuda-test --exit
 
-CMD [ "python", "-u", "launch.py", "--skip-torch-cuda-test", "--use-cpu=all", "--no-half", "--no-half-vae", "--listen" ]
+RUN sed -i -e 's/    return "cpu"/    torch.set_num_threads(8)\n    return "cpu"/' modules/devices.py
+COPY config.json .
+
+CMD [ "./webui.sh", "-f", "--skip-torch-cuda-test", "--use-cpu=all", "--no-half", "--no-half-vae", "--listen" ]
