feat: add gcloud CLI command to create an instance.

--- a/webui/Dockerfile
+++ b/webui/Dockerfile
@@ -15,8 +15,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git
 WORKDIR /stable-diffusion-webui
 
-RUN ./webui.sh -f --xformers --skip-torch-cuda-test --exit
-
 COPY config.json .
 
-CMD [ "./webui.sh", "-f", "--xformers", "--no-half-vae", "--listen" ]
+RUN ./webui.sh -f --xformers --skip-torch-cuda-test --exit
+
+CMD [ "./webui.sh", "-f", "--xformers", "--listen" ]
